# mcs

./: .gitignore  CMakeLists.txt  Cargo.toml
crates/mcs/: Cargo.toml
crates/mcs-cpp/: CMakeLists.txt  Cargo.toml
crates/mcs-cpp/tests/: tests.cpp
crates/mcs/src/: lib.rs
include/: mcs.hpp  service.hpp
src/: client.cpp  lib.rs  server.cpp
tests/: CMakeLists.txt  tests.cpp
