[package]
name = "mcs-cpp"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace.package]
description = "Matrix Commitment Schemes with C++ interop"
authors = ["Kanav Gupta <kanav0610@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
keywords = [""]
categories = [""]
repository = "https://github.com/kanav99/mcs"


[lib]
name = "mcscpp"
crate-type = ["staticlib"]

[dependencies]
bincode = "1.3.3"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-std = "0.5.0"
ark-test-curves = { version = "0.5.0", features = ["bls12_381_curve"]}
ark-serialize = { version = "0.5.0", features = ["derive"] }